adding header of the project

--- a/src/template.html
+++ b/src/template.html
@@ -6,9 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+  <header>
+    <nav class="grey darken-4">
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo"><i class="tiny material-icons">cloud</i>Weather App</a>
+      </div>
+    </nav>
+  </header>     
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>          
 </body>
