--- a/src/template.html
+++ b/src/template.html
@@ -16,8 +16,25 @@
         <a href="#!" class="brand-logo"><i class="tiny material-icons">cloud</i>Weather App</a>
       </div>
     </nav>
-  </header>     
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>          
+  </header>
+  <main class="container">
+    <div class="row blue lighten-5">
+      <div class="input-field col m6 offset-m3">
+        <input id="input_text" type="text" data-length="10">
+        <label for="input_text">Input text</label>
+      </div>
+    </div>
+  </main> 
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('input#input_text').characterCounter();
+    });
+  </script>          
 </body>
 </html>
