--- a/src/template.html
+++ b/src/template.html
@@ -18,12 +18,17 @@
     </nav>
   </header>
   <main class="container">
-    <div class="row blue lighten-5">
-      <div class="input-field col m6 offset-m3">
-        <input id="input_text" type="text" data-length="10">
-        <label for="input_text">Input text</label>
-      </div>
-    </div>
+      <nav class="mt-1rem">
+        <div class="nav-wrapper">
+          <form>
+            <div class="input-field">
+              <input id="search" type="search" placeholder="Enter City Name" required>
+              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <i class="material-icons">close</i>
+            </div>
+          </form>
+        </div>
+      </nav>
   </main> 
   <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
