Placed div to contain map

--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,8 @@
       </div>
     </nav>
   </header>
-  <main class="container">
+  <main>
+    <div class="container">
       <nav class="mt-1rem">
         <div class="nav-wrapper">
           <form>
@@ -29,6 +30,38 @@
           </form>
         </div>
       </nav>
+    </div>
+      <div class="row">
+        <div class="col s6 card">
+          <div class="map"></div>
+        </div>
+          <div class="col s6">
+            <div class="card">
+              <div class="card-content row">
+                <div class="info col s6">
+                  <span class="card-title">City Name</span>
+                  <p>October 23,2019</p>
+                  <div class="switch">
+                      <label>
+                        Off
+                        <input type="checkbox">
+                        <span class="lever"></span>
+                        On
+                      </label>
+                    </div>
+                </div>
+                <div class="col s6">
+                  <ul class="collection">
+                    <li class="collection-item">Max Temp: 28°C</li>
+                    <li class="collection-item">Min Temp: 22°C</li>
+                    <li class="collection-item">Relative Humidity: 64%</li>
+                    <li class="collection-item">Wind speed: 24m/s</li>
+                  </ul>                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
   </main> 
   <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
