Rendering upcoming date and temparature div and transforming to js

--- a/src/template.html
+++ b/src/template.html
@@ -31,23 +31,21 @@
         </div>
       </nav>
     </div>
-      <div class="row">
-        <div class="col s6 card">
-          <div class="map"></div>
-        </div>
-          <div class="col s6">
-            <div class="card">
-              <div class="card-content row">
-                <div class="info col s6">
-                  <span class="card-title">City Name</span>
-                  <p>October 23,2019</p>
-                  <div class="switch">
-                      <label>
-                        Off
-                        <input type="checkbox">
-                        <span class="lever"></span>
-                        On
-                      </label>
+    <div class="weather">
+      <div class="today row">
+        <div class="col s8 offset-s2">
+          <div class="card">
+            <div class="card-content row">
+              <div class="info col s6">
+                <span class="card-title">City Name</span>
+                <p>October 23,2019</p>
+                <div class="switch">
+                  <label>
+                    <span class="blue-text darken-4">C</span>
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    <span class="blue-text darken-4">F</span>
+                  </label>
                     </div>
                 </div>
                 <div class="col s6">
@@ -62,6 +60,30 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="row next-append">
+        <div class="col s12">
+          <div class="card col s12 m6 l3">
+            <ul class="card-content collection with-header">
+              <li class="collection-header"><h5>Date</h5></li>
+              <li class="collection-item">Alvin</li>
+              <li class="collection-item">Alvin</li>
+              <li class="collection-item">Alvin</li>
+              <li class="collection-item">Alvin</li>
+            </ul>  
+          </div>
+          <div class="card col s12 m6 l3">
+              <ul class="card-content collection with-header">
+                <li class="collection-header"><h5>Date</h5></li>
+                <li class="collection-item">Alvin</li>
+                <li class="collection-item">Alvin</li>
+                <li class="collection-item">Alvin</li>
+                <li class="collection-item">Alvin</li>
+              </ul>  
+            </div>
+        </div>
+      </div>
   </main> 
   <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
