transformed html to js and fetching data from url

--- a/src/template.html
+++ b/src/template.html
@@ -95,6 +95,7 @@
     $(document).ready(function() {
       $('input#input_text').characterCounter();
     });
-  </script>          
+  </script>
+  <script type='module' src="./js/index.js"></script>       
 </body>
 </html>
