--- a/src/template.html
+++ b/src/template.html
@@ -64,7 +64,7 @@
           </div>
         </div>
       </div> -->
-      <div class="row next-append">
+      <!-- <div class="row next-append">
         <div class="col s12">
           <div class="card col s12 m6 l3">
             <ul class="card-content collection with-header">
@@ -75,17 +75,8 @@
               <li class="collection-item">Alvin</li>
             </ul>  
           </div>
-          <div class="card col s12 m6 l3">
-            <ul class="card-content collection with-header">
-              <li class="collection-header"><h5>Date</h5></li>
-              <li class="collection-item">Alvin</li>
-              <li class="collection-item">Alvin</li>
-              <li class="collection-item">Alvin</li>
-              <li class="collection-item">Alvin</li>
-            </ul>  
-          </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </main> 
   <script
